Fix filter wrapping (#860)

--- a/enterprise/app/filter/filter.css
+++ b/enterprise/app/filter/filter.css
@@ -2,6 +2,7 @@
   display: flex;
   transition: background-color 300ms;
   border-radius: 8px;
+  margin-left: auto;
 
   --row-height: 40px;
 }
